--- a/src/index.css
+++ b/src/index.css
@@ -16,7 +16,10 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
-
+html, body {
+  height: 100%;
+  margin: 0;
+}
 a {
   font-weight: 500;
   color: #646cff;
