--- a/src/App.css
+++ b/src/App.css
@@ -8,6 +8,34 @@
   text-align: center;
 }
 
+.header-item {
+  position: relative;
+  text-decoration: none;
+  color: #31363F;
+  font-size: 24px;
+  display: inline-block;
+  overflow: hidden;
+}
+
+.header-item::after {
+  content: '';
+  position: absolute;
+  left: 0;
+  bottom: -10px;
+  width: 100%;
+  height: 0px;
+  background-color: transparent;
+  transition: all 0.2s ease-out;
+}
+
+.header-item:hover::after {
+  height: 2px; 
+  bottom: 0;
+  background-color: #31363F;
+}
+
+
+
 .logo {
   height: 6em;
   padding: 1.5em;
